[package]
name = "catr"
author = "bluthej <joffrey.bluthe@e.email>"
version = "0.1.0"
about = "Rust cat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
rand = "0.8.5"
