[package]
name = "cutr"
author = "bluthej <joffrey.bluthe@e.email>"
version = "0.1.0"
about = "Rust cut"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
rand = "0.8.5"
