[package]
name = "lsr"
authors = ["bluthej <joffrey.bluthe@e.email>"]
version = "0.1.0"
description = "Rust ls"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
rand = "0.8.5"
